refactor, working docker image

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   </div>
 
   <script>
-    const socket = new WebSocket('ws://localhost:8080/ws');
+    const socket = new WebSocket(`${window.location.origin.replace(/^http/, 'ws')}/ws`);
     const messagesDiv = document.getElementById('messages');
     const messageInput = document.getElementById('messageInput');
     const sendButton = document.getElementById('sendButton');
