--- a/static/index.html
+++ b/static/index.html
@@ -4,45 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WebSocket Chat</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin: 0;
-      padding: 20px;
-    }
-    #messages {
-      width: 80%;
-      height: 300px;
-      border: 1px solid #ccc;
-      margin-bottom: 20px;
-      padding: 10px;
-      overflow-y: scroll;
-      white-space: pre-wrap;
-      background-color: #f9f9f9;
-    }
-    #inputContainer {
-      display: flex;
-      width: 80%;
-    }
-    #messageInput {
-      flex: 1;
-      padding: 10px;
-      font-size: 16px;
-      border: 1px solid #ccc;
-      border-right: none;
-    }
-    #sendButton {
-      padding: 10px;
-      font-size: 16px;
-      border: 1px solid #ccc;
-      cursor: pointer;
-      background-color: #007bff;
-      color: white;
-    }
-  </style>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
   <h1>WebSocket Chat</h1>
